update todo
