# cmd/http_server/server.go
@@ -31,7 +31,7 @@ func Init() {
 	router.HandleFunc("/", rootHandler).Methods("GET", "OPTIONS")
 	router.HandleFunc("/api", rootAPIHandler).Methods("GET", "OPTIONS")
 	router.HandleFunc("/api/notes", notesHandler).Methods("GET", "OPTIONS", "POST")
-	router.HandleFunc("/api/notes/{id}", singleNoteHandler).Methods("GET", "OPTIONS", "DELETE")
+	router.HandleFunc("/api/notes/{id}", singleNoteHandler).Methods("GET", "OPTIONS", "PUT", "DELETE")
 	router.HandleFunc("/api/login", loginHandler).Methods("GET", "OPTIONS", "POST", "DELETE")
 	router.HandleFunc("/api/users", usersHandler).Methods("GET", "OPTIONS")
 	router.HandleFunc("/api/users/{id}", singleUserHandler).Methods("GET", "OPTIONS", "PUT", "DELETE")
